# micro-service-fast

./: .gitignore  pyproject.toml
order-service/: main.py  models.py
order_service/: main.py  repository.py
user-service/: main.py  models.py  user-service.db
user_service/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
